--- a/LE1_Cabatic_BC.ipynb
+++ b/LE1_Cabatic_BC.ipynb
@@ -8,13 +8,13 @@
       "collapsed_sections": [
         "8VKW0n4_rybr",
         "LHaSWu2Cr8GQ",
-        "FxmTTdx2sFWu",
         "QjAJ0JCZsL6s",
         "u0GgHfdSFEky",
         "VSs3QW3kD5-h",
         "8cjFYDkEkNdM",
         "_w_YBPtz56gI",
-        "znVq8SRgBKZI"
+        "znVq8SRgBKZI",
+        "62xPx9IOlYfA"
       ]
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "id": "rZbnY7jNYY55",
         "outputId": "88f47711-5576-45a7-f84a-420730f42a68"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "FhTUzo_3Z7lN"
       },
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "D6OL26HCdP5g"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
         },
         "outputId": "dac0ca56-bbc4-43d1-95c2-595addb50c52"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -545,7 +545,7 @@
         },
         "outputId": "94feb74e-5cdd-42ea-fa88-8cdccff9c5c0"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -572,7 +572,7 @@
         "id": "uQhpcLMu-MOC",
         "outputId": "b800a50e-3404-42e5-9113-1733b0f5bf9d"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -598,7 +598,7 @@
         },
         "outputId": "d9b02588-30c8-4224-d77a-d57d6d1cc0ff"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +636,7 @@
         "id": "YH5_YbihrD0R",
         "outputId": "6bbcf561-3820-447b-d978-3ca48f821803"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -665,7 +665,7 @@
         },
         "outputId": "47289ffc-75ca-4009-b3b6-5d4af66c382a"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -708,7 +708,7 @@
         },
         "outputId": "92a3dc3d-d13d-4132-a740-5eab1b31f1b8"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -735,7 +735,7 @@
         "id": "QzjFVWY0eLty",
         "outputId": "4b39e718-1e6f-452b-f4e8-55a6438ff702"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,7 +777,7 @@
         "id": "x5uJ4GTXWx4z",
         "outputId": "acf7ee06-218e-43c9-ffc0-05f1e6685511"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -811,7 +811,7 @@
         "id": "x2Y6JH8ck5_T",
         "outputId": "5a7cdb00-0bb8-47fe-8e0f-3b002738ffff"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -843,7 +843,7 @@
         },
         "outputId": "296ac295-4625-4a12-85a1-124516947b0d"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -870,8 +870,17 @@
       "cell_type": "code",
       "source": [
         "X = df.drop('Concrete compressive strength', axis = 1)\n",
-        "y = df['Concrete compressive strength']\n",
-        "\n",
+        "y = df['Concrete compressive strength']"
+      ],
+      "metadata": {
+        "id": "PGkFr8zBCwXO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42)\n",
         "\n",
         "linreg_model = LinearRegression()\n",
@@ -906,7 +915,7 @@
         "id": "awMAKYJgtqFh",
         "outputId": "92d6d27a-fd88-44c7-b6e2-89aead44d5ec"
       },
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -936,7 +945,7 @@
         "id": "ZFCqryCqpoht",
         "outputId": "26d3b9c5-62ed-4731-8ebc-36161b51d495"
       },
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -950,7 +959,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def plot_linear_regression(y_test, y_pred):\n",
+        "def linear_regression(y_test, y_pred):\n",
         "  plt.scatter(y_test, y_test, color='blue', label='Actual')\n",
         "  plt.scatter(y_test, y_pred, color='red', label='Predicted')\n",
         "  plt.plot(y_test, y_test, color='black', label='Regression Line')\n",
@@ -959,7 +968,7 @@
         "  plt.ylabel('Predicted values')\n",
         "  plt.legend()\n",
         "\n",
-        "plot_linear_regression(y_test, y_pred)\n",
+        "linear_regression(y_test, y_pred)\n",
         "\n",
         "plt.show()"
       ],
@@ -971,7 +980,7 @@
         "id": "5NXZo-ihAeOi",
         "outputId": "65da5567-e562-4d24-f956-3ff0d462e0dd"
       },
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -997,9 +1006,6 @@
     {
       "cell_type": "code",
       "source": [
-        "X = df.drop('Concrete compressive strength', axis = 1)\n",
-        "y = df['Concrete compressive strength']\n",
-        "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42)\n",
         "\n",
         "ridge_model = Ridge(alpha=1.0)\n",
@@ -1034,7 +1040,7 @@
         "id": "JdQMQrclEaKC",
         "outputId": "e4872e92-1504-4509-8210-a94494b6fa83"
       },
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1064,7 +1070,7 @@
         "id": "sjB3ccq_rRbU",
         "outputId": "b496d1aa-882b-4e57-f196-db666b1e659c"
       },
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1099,7 +1105,7 @@
         "id": "IRQAswNYIPz9",
         "outputId": "52ac2281-333c-48c7-e4e2-29bc81d1aea3"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1125,9 +1131,6 @@
     {
       "cell_type": "code",
       "source": [
-        "X = df.drop('Concrete compressive strength', axis = 1)\n",
-        "y = df['Concrete compressive strength']\n",
-        "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42)\n",
         "\n",
         "ridgecv_model = RidgeCV(alphas=[1e-3, 1e-2, 1e-1, 1])\n",
@@ -1162,7 +1165,7 @@
         "id": "47bbJgDbCD_f",
         "outputId": "65aca712-bb4d-4c55-dafe-7e5c67cced93"
       },
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1192,7 +1195,7 @@
         "id": "bpgeQ0NGsLqr",
         "outputId": "71a53a59-42d0-4bb3-a228-6ed2c5f72140"
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1227,7 +1230,7 @@
         "id": "ZG7iO-OgILO4",
         "outputId": "aab9c6ef-10b8-43e7-c948-9a87a32973e1"
       },
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1253,9 +1256,6 @@
     {
       "cell_type": "code",
       "source": [
-        "X = df.drop('Concrete compressive strength', axis = 1)\n",
-        "y = df['Concrete compressive strength']\n",
-        "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42)\n",
         "\n",
         "sgd_model = SGDRegressor(max_iter=1000, tol=1e-3)\n",
@@ -1290,7 +1290,7 @@
         "id": "UITqzAVckLje",
         "outputId": "bcb250d9-5795-4a04-dd0e-1ac9af27e455"
       },
-      "execution_count": 224,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1320,7 +1320,7 @@
         "id": "qcvElE0Ws_T1",
         "outputId": "ca01a35f-f3c7-41d4-8f1e-01fd6f1333cc"
       },
-      "execution_count": 229,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1355,7 +1355,7 @@
         "id": "iymavDJQlskq",
         "outputId": "fa42eaf2-f53d-422c-c96e-a4c3e01e0f3a"
       },
-      "execution_count": 230,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1381,9 +1381,6 @@
     {
       "cell_type": "code",
       "source": [
-        "X = df.drop('Concrete compressive strength', axis = 1)\n",
-        "y = df['Concrete compressive strength']\n",
-        "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42)\n",
         "\n",
         "dtree_model = DecisionTreeRegressor()\n",
@@ -1416,7 +1413,7 @@
         },
         "outputId": "f559e36e-4cc7-4e96-96a7-0544c392e9b7"
       },
-      "execution_count": 236,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1443,7 +1440,7 @@
         "id": "jzTKDePuu3de",
         "outputId": "0eb5eff4-38f9-4fcf-a535-2712cfd56112"
       },
-      "execution_count": 240,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1478,7 +1475,7 @@
         },
         "outputId": "66b89fe6-aea8-4e93-d77a-a8b980c2b0ed"
       },
-      "execution_count": 241,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1504,9 +1501,6 @@
     {
       "cell_type": "code",
       "source": [
-        "X = df.drop('Concrete compressive strength', axis = 1)\n",
-        "y = df['Concrete compressive strength']\n",
-        "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42)\n",
         "\n",
         "rf_model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
@@ -1538,7 +1532,7 @@
         "id": "uQ-wnsVuALty",
         "outputId": "396c8406-1167-43eb-d171-29e679b41e3a"
       },
-      "execution_count": 242,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1565,7 +1559,7 @@
         "id": "Z-REclVEvxk0",
         "outputId": "1a5be5fa-5e69-40b9-c718-fdc6109331bb"
       },
-      "execution_count": 248,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1600,7 +1594,7 @@
         "id": "3qZoogVDBfmE",
         "outputId": "934d9adf-1dde-4647-8fb5-24b3845c0869"
       },
-      "execution_count": 244,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1652,7 +1646,7 @@
         "id": "tWIAeoU8V1HW",
         "outputId": "c2bc0722-ca7d-488c-ae43-2d4daa42c480"
       },
-      "execution_count": 247,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
